// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Page Width Enforcer default 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    className="page-content width-enforcer"
  >
    This is some content...
    <style
      jsx={true}
    >
      
      .width-enforcer {
        margin: 20px auto;
        max-width: 1024px;
      }

      @media (max-width: 1024px) {
        .width-enforcer {
          margin: 20px 20px;
        }
      }
    
    </style>
  </div>
</div>
`;

exports[`Storyshots Page Width Enforcer no vertical margin 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    className="page-content width-enforcer"
  >
    This is some content without a vertical margin around it.
    <style
      jsx={true}
    >
      
      .width-enforcer {
        margin: 0 auto;
        max-width: 1024px;
      }

      @media (max-width: 1024px) {
        .width-enforcer {
          margin: 0 20px;
        }
      }
    
    </style>
  </div>
</div>
`;
